--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>E Commerce</title>
+    <title>Maclectrons</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
